Add step 1 changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
       <div class="MainContainer">
-          <nav>
+          <nav id="navBar">
               This is the Nav Bar
           </nav>
           <div class="Content">
