Add almost working step3

--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@
                   Left
               </div>
               <div class="Center">
-                  Center
+                  <section>
+                      <div class="imgStyled"><img src="http://www.placecage.com/c/200/400" /></div>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer hendrerit mauris non odio pellentesque, sed tempus augue consectetur. Nullam gravida, nisl et scelerisque malesuada, lorem augue sollicitudin est, vel pellentesque tortor dolor nec nunc. Donec tortor dolor, rhoncus vel justo ac, fringilla bibendum metus. Maecenas eget consectetur nulla, sollicitudin lobortis erat. Proin et quam leo. Duis bibendum diam ac dui dignissim, non pharetra elit commodo. Donec feugiat lorem ac vulputate tristique. Maecenas dictum et massa quis congue. In pharetra ante sit amet laoreet sagittis. Vivamus quis leo a diam cursus mollis ac non lorem. Quisque nisl dolor, luctus quis mattis non, lobortis sed justo. Suspendisse eget sagittis ipsum. Maecenas accumsan, sem vel placerat consequat, diam lacus egestas dui, ut ultrices dolor felis vel risus. Integer blandit cursus leo, id tempus nibh pulvinar et. Sed pulvinar consectetur orci, id auctor erat dictum ut.</p>
+                  </section>
+                  <section>
+                      <div class="imgStyled"><img src="http://www.placecage.com/c/200/400" /></div>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer hendrerit mauris non odio pellentesque, sed tempus augue consectetur. Nullam gravida, nisl et scelerisque malesuada, lorem augue sollicitudin est, vel pellentesque tortor dolor nec nunc. Donec tortor dolor, rhoncus vel justo ac, fringilla bibendum metus. Maecenas eget consectetur nulla, sollicitudin lobortis erat. Proin et quam leo. Duis bibendum diam ac dui dignissim, non pharetra elit commodo. Donec feugiat lorem ac vulputate tristique. Maecenas dictum et massa quis congue. In pharetra ante sit amet laoreet sagittis. Vivamus quis leo a diam cursus mollis ac non lorem. Quisque nisl dolor, luctus quis mattis non, lobortis sed justo. Suspendisse eget sagittis ipsum. Maecenas accumsan, sem vel placerat consequat, diam lacus egestas dui, ut ultrices dolor felis vel risus. Integer blandit cursus leo, id tempus nibh pulvinar et. Sed pulvinar consectetur orci, id auctor erat dictum ut.</p>
+                  </section>
               </div>
               <div class="Right">
-                  Right
+                  <img src="http://www.placecage.com/gif/400/400" />
               </div>
           </div>
       </div>
