Add changes for step 3

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
           </nav>
           <div class="Content">
               <div class="Left">
-                  Left
+                  <div class="small-image"><img src="https://www.placecage.com/g/50/50" /></div><p>Small Text Here</p>
+                  <div class="flex-break"></div>
+                  <div class="small-image"><img src="https://www.placecage.com/g/50/50" /></div><p>Small Text Here</p>
+                  <div class="flex-break"></div>
+                  <div class="small-image"><img src="https://www.placecage.com/g/50/50" /></div><p>Small Text Here</p>
+                  <div class="flex-break"></div>
+                  <div class="small-image"><img src="https://www.placecage.com/g/50/50" /></div><p>Small Text Here</p>
               </div>
               <div class="Center">
                   <section>
