Add navbar changes

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
 <div class="MainContainer">
     <nav id="navBar">
-        <i class="fa fa-globe fa-lg" aria-hidden="true"></i><span id="welcomeMsg">Welcome to the Navbar</span>
-        <i class="fa fa-user" aria-hidden="true"></i><span id="myAccount">My Account</span>
+        <i class="fa fa-globe" aria-hidden="true"></i><span id="welcomeMsg">Welcome to the <br/><span>Navbar</span></span>
+        <div class="myAccountBlock">
+            <i class="fa fa-user" id="myAccount" aria-hidden="true"></i><span>My Account</span>
+        </div>
     </nav>
     <div class="Content">
         <div class="Left">
