Add some responsive styles to nav and more pictures for nicholas cage

--- a/index.html
+++ b/index.html
@@ -16,18 +16,21 @@
     </nav>
     <div class="Content">
         <div class="Left">
-            <div class="small-image"><img src="https://www.placecage.com/g/50/50" /></div><p>Small Text Here</p>
+            <div class="small-image"><img width="50px" src="https://i.pinimg.com/originals/06/a5/58/06a558d43ee62a5cbb45e57d01d47f41.jpg" /></div><p>Ghost Rider</p>
             <div class="flex-break"></div>
-            <div class="small-image"><img src="https://www.placecage.com/g/50/50" /></div><p>Small Text Here</p>
+            <div class="small-image"><img width="50px" src="https://thebrotherhoodofevilgeeks.files.wordpress.com/2013/03/nic-cage.jpg?w=604" /></div><p>Speed</p>
             <div class="flex-break"></div>
-            <div class="small-image"><img src="https://www.placecage.com/g/50/50" /></div><p>Small Text Here</p>
+            <div class="small-image"><img width="50px" src="https://img.thedailybeast.com/image/upload/c_crop,d_placeholder_euli9k,h_1439,w_2560,x_0,y_0/dpr_1.5/c_limit,w_1044/fl_lossy,q_auto/v1492195021/articles/2014/10/19/the-secrets-of-pulp-fiction-20-things-you-didn-t-know-about-the-movie-on-its-20th-anniversary/141017-stern-Pulp_Fiction-tease_pxxicm" /></div><p>Pulp Fiction</p>
             <div class="flex-break"></div>
-            <div class="small-image"><img src="https://www.placecage.com/g/50/50" /></div><p>Small Text Here</p>
+            <div class="small-image"><img width="50px" src="https://musicart.xboxlive.com/6/cfbea253-0000-0000-0000-000000000009/504/image.jpg?w=1920&h=1080" /></div><p>Lord of War</p>
         </div>
         <div class="Center">
             <section>
                 <div class="imgStyled"><img src="http://www.placecage.com/c/200/400" /></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer hendrerit mauris non odio pellentesque, sed tempus augue consectetur. Nullam gravida, nisl et scelerisque malesuada, lorem augue sollicitudin est, vel pellentesque tortor dolor nec nunc. Donec tortor dolor, rhoncus vel justo ac, fringilla bibendum metus. Maecenas eget consectetur nulla, sollicitudin lobortis erat. Proin et quam leo. Duis bibendum diam ac dui dignissim, non pharetra elit commodo. Donec feugiat lorem ac vulputate tristique. Maecenas dictum et massa quis congue. In pharetra ante sit amet laoreet sagittis. Vivamus quis leo a diam cursus mollis ac non lorem. Quisque nisl dolor, luctus quis mattis non, lobortis sed justo. Suspendisse eget sagittis ipsum. Maecenas accumsan, sem vel placerat consequat, diam lacus egestas dui, ut ultrices dolor felis vel risus. Integer blandit cursus leo, id tempus nibh pulvinar et. Sed pulvinar consectetur orci, id auctor erat dictum ut.</p>
+                <div>
+                    <h2><span>S</span>tarring Nicholas Cage</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer hendrerit mauris non odio pellentesque, sed tempus augue consectetur. Nullam gravida, nisl et scelerisque malesuada, lorem augue sollicitudin est, vel pellentesque tortor dolor nec nunc. Donec tortor dolor, rhoncus vel justo ac, fringilla bibendum metus. Maecenas eget consectetur nulla, sollicitudin lobortis erat. Proin et quam leo. Duis bibendum diam ac dui dignissim, non pharetra elit commodo. Donec feugiat lorem ac vulputate tristique. Maecenas dictum et massa quis congue. In pharetra ante sit amet laoreet sagittis. Vivamus quis leo a diam cursus mollis ac non lorem. Quisque nisl dolor, luctus quis mattis non, lobortis sed justo. Suspendisse eget sagittis ipsum. Maecenas accumsan, sem vel placerat consequat, diam lacus egestas dui, ut ultrices dolor felis vel risus. Integer blandit cursus leo, id tempus nibh pulvinar et. Sed pulvinar consectetur orci, id auctor erat dictum ut.</p>
+                </div>
             </section>
             <section>
                 <div class="imgStyled"><img src="http://www.placecage.com/c/200/400" /></div>
